# Gitor

./: .gitignore  LICENSE  README.md  gitor.toml  setup.cfg
src/Gitor.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/gitor/: __init__.py  _set.py  api.py  gitrequest.py  repositories.py
tests/: example.py
