[metadata]
name = gitor
version = 0.0.3
author = Monnapse
author_email = monnapse@gmail.com
description = Github python wrapper, Custom made for getting repositories for your python web server.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/monnapse/gitor
project_urls =
    Bug Tracker = https://github.com/monnapse/gitor/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.7

[options.packages.find]
where = src
